<resources>
    <string name="app_name">EjerciciosTanda2</string>
    <string name="sumaTon">SUMATON</string>
    <string name="robarDatos">Formulario</string>
    <string name="condiciones">condiciones</string>
    <string name="loMio">Ejercicio 4</string>
    <string name="titulo">EJERCICIOS</string>
    <string name="tituloSuma">SUMA</string>
    <string name="igual">=</string>
    <string name="mas">+</string>
    <string name="btnComprobar">COMPROBAR RESULTADO</string>
    <string name="correcto">CORRECTO</string>
    <string name="incorrecto">INCORRECTO</string>
    <string name="volver">VOLVER</string>
    <string name="Resultado">El resultado de la operacion es</string>
    <string name="textoCorrecto">PREGUNTAS CORRECTAS</string>
    <string name="incorrectas">INCORRECTAS</string>
    <string name="nombre">Nombre:</string>
    <string name="aficiones">Aficiones</string>
    <string name="libros">Libros</string>
    <string name="videojuegos">Videojuegos</string>
    <string name="hedonismo">hedonismo</string>
    <string name="tirar_fichas">Tirar fichas</string>
    <string name="jugger">Jugger</string>
    <string name="apellidos">Apellidos</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
</resources>