<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".ResultadoSumaTon">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Resultado"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvCorrecto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correcto"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:drawableLeft="@drawable/ic_flechablanca"
        android:gravity="center"
        android:text="@string/volver" />
</LinearLayout>