<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SumaTon">

    <EditText
        android:id="@+id/etResultado"
        android:layout_width="70dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="189dp"
        android:layout_height="48dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/tituloSuma"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="36dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/igual"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/etNumero2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/etNumero1"
        android:layout_width="48dp"
        android:layout_height="42dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="52dp"
        android:layout_height="39dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/mas"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/etNumero2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/etNumero1"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/etNumero2"
        android:layout_width="48dp"
        android:layout_height="42dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/etNumero1"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnComprobar"
        android:layout_width="233dp"
        android:layout_height="43dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnComprobar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumero2" />

</androidx.constraintlayout.widget.ConstraintLayout>